2004-11-13  James Bowes  <bowes@cs.dal.ca>

	* src/yelp-man-parser.c: (parser_handle_linetag):
	More hanging tag (IP, TP) fixes.
	
2004-11-13  James Bowes  <bowes@cs.dal.ca>

	* src/yelp-man-parser.c: (yelp_man_parser_parse_file),
	(parser_parse_line), (parser_handle_linetag): More 
	manpage fixing, including better handling of using 
	hanging tag paragraphs as list items.

2004-11-13  James Bowes  <bowes@cs.dal.ca>

	* src/yelp-man-parser.c: (yelp_man_parser_parse_file),
	(parser_handle_linetag), (parser_handle_row_options),
	(parser_parse_table): More manpage fixes.

2004-11-13  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html.xsl.in:
	- Override db.xref.target

	* stylesheets/man2html.xsl:
	- Don't <pre> paragraphs, maybe

2004-11-13  Shaun McCance  <shaunm@gnome.org>

	* src/test-pager.c:
	* src/yelp-man-pager.c:
	* stylesheets/man2html.xsl:
	- More manpage work

2004-11-13  James Bowes  <bowes@cs.dal.ca>

	* src/yelp-man-parser.c: (parser_read_until), 
	(parser_parse_table), (parser_make_link): Add in 
	detection of page_name(section_num) style man page 
	references, and create the appropriate link.

2004-11-08  Sebastien Bacher  <seb128@debian.org>

	* configure.in:
	* src/Makefile.am:
	* src/yelp-main.c: (main):
	patch by Christian Persch <chpe@gnome.org> to enable the compilation 
	against firefox' gtkmozembed.

2004-11-01  Shaun McCance  <shaunm@gnome.org>

	* NEWS:
	* configure.in:
	* po/*.po:
	- Version 2.9.1

	* src/Makefile.am:
	- Remove debug for release

2004-11-01  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* src/Makefile.am:
	- Do the -fno-rtti thing the way epiphany does it

	* data/ui/yelp-ui.xml:
	* src/yelp-base.c:
	* src/yelp-db-pager.c:
	* src/yelp-utils.c:
	* src/yelp-window.c:
	- Added stub for reload.  Don't use it unless you like things to crash
	- Cancellation is somewhat working

	* po/POTFILES.in:
	- Added data/yelp.schemas.in and src/yelp-settings.c

2004-10-28  James Henstridge  <james@jamesh.id.au>
